<resources>
    <string name="app_name">Diplomich</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Home">Home</string>
    <string name="Favorites">Favorites</string>
    <string name="cart">Cart</string>
    <string name="more">More</string>
    <string name="AppName">Dwonesh</string>
    <string name="CreateNew">Create new Account</string>
    <string name="LastName">Last Name</string>
    <string name="Name">Name</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="Phone">Phone Number</string>
    <string name="Register">REGISTER</string>
    <string name="Login">Login</string>
    <string name="LoginText">Have an account? Click here</string>
    <string name="RegisterText">Do not have an account? Click here</string>
    <string name="Authorization">Authorization</string>
    <string name="ForgetPassword">Forgot Password?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="ResetDialog">Reset Password?</string>
    <string name="ResetEmail">Enter Your Email To Received Message</string>
    <string name="ResetLinkSent">Reset Link Sent to Your Email</string>
    <string name="ResetLinkFailed">Reset link is not sent!</string>
    <string name="HelloToUser">Hello</string>
    <string name="LogOut">LogOut</string>
    <string name="NotVerifiedEmail">To verify your email click here</string>
    <string name="VerificationEmail">Verification Email has been sent</string>
    <string name="AdminMessage">Add new item</string>
    <string name="NonAdminTextView">Am i a user?</string>
    <string name="product_name">Product name…</string>
    <string name="add_product_description">Add product description</string>
    <string name="add_price">Add price</string>
    <string name="accept">Accept</string>
    <string name="imageRequired">Image is required</string>
    <string name="descriptionRequired">Description is required</string>
    <string name="priceRequired">Price is required</string>
    <string name="uploadedImage">Product Image uploaded successful</string>
    <string name="MessageToAdmin">Product image save to Database successfully</string>
    <string name="LoadingTitle">Add New Product</string>
    <string name="loadingMessage">Please wait…</string>
    <string name="searchItem">Find your device</string>
    <string name="popular_products">Popular products</string>
    <string name="view_all">View all</string>
    <string name="explore_products">Explore Products</string>
    <string name="add_cart">Add to cart</string>
    <string name="buy_now">Buy now</string>
    <string name="your_order">Your order</string>
    <string name="RemoveFromCart">Remove form Cart</string>
    <string name="Change">Change</string>
    <string name="Continue">Continue</string>
    <string name="contact_details">Contact details</string>
    <string name="address">Address</string>
    <string name="check_new_items">Check New Items</string>
    <string name="new_orders">New Orders</string>
    <string name="user_products">User Products</string>
    <string name="catalog_fragment">Catalog</string>
    <string name="Mouse">Mice</string>
    <string name="Keyboard">Keyboards</string>
    <string name="VideoCard">Video Cards</string>
    <string name="Monitors">Monitors</string>
    <string name="Phones">Phones</string>
    <string name="GamePad">Game Controllers</string>
    <string name="SearchItem">Search Item</string>
    <string name="your_cart_list">Your Cart List</string>
    <string name="search">Search Product</string>
    <string name="ordered_time">Order time</string>
    <string name="empty_order">Empty Order List</string>
    <string name="changeLanguage">Change Language</string>
    <string name="change_application_theme">Change application Theme</string>
    <string name="purchase">Thank you for purchase</string>
    <string name="ConfirmPurchase">Confirm before purchase</string>
    <string name="ChangeInputData">Do you want to change this field?</string>
    <string name="ProvideNewData">Provide new information about yourself!</string>
    <string name="NotFoundCategory">Failed, category does not exist</string>
</resources>